# server/src/dtos/asset-response.dto.ts
@@ -43,7 +43,6 @@ export class AssetResponseDto extends SanitizedAssetResponseDto {
   isFavorite!: boolean;
   isArchived!: boolean;
   isTrashed!: boolean;
-  isOffline!: boolean;
   exifInfo?: ExifResponseDto;
   smartInfo?: SmartInfoResponseDto;
   tags?: TagResponseDto[];
@@ -148,7 +147,6 @@ export function mapAsset(entity: AssetEntity, options: AssetMapOptions = {}): As
     unassignedFaces: entity.faces?.filter((face) => !face.person).map((a) => mapFacesWithoutPerson(a)),
     checksum: entity.checksum.toString('base64'),
     stack: withStack ? mapStack(entity) : undefined,
-    isOffline: entity.isOffline,
     hasMetadata: true,
     duplicateId: entity.duplicateId,
     resized: true,
